# ble_script_runner

./: .gitmodules  README.md  maaain.py  maain.py  main.py  requirements.txt
BleCentral/: .gitignore  README.md  config.py  main.py  main_linux.py  requirements.txt  requirements_linux.txt  requirements_windows.txt  strings.py
BleCentral/scripts/: execute_for.ps1  hello.ps1  hello.sh  math.sh
BleCentral/src/: app.py  ble_client.py  constants.py  performance_metrics.py  utilities.py
BleCentralInRust/: Cargo.toml  README.md
BleCentralInRust/scripts/: execute_for.sh  hello.sh  math.ps1
BleCentralInRust/src/: main.rs
