[package]
name = "BleCentralInRust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
btleplug = "0.10.4"
futures = "0.3.25"
tokio = { version = "1.22.0", features = ["full"] }
uuid = "1.2.2"
log = "0.4"
pretty_env_logger = "0.4"
shell-words = "1.1.0"
